...
        super.viewDidLoad()
        
        setupUI()
    }

    private func setupUI() {
        title = "Github Repository"
        
        // Setup UI Search
        let searchVC = UISearchController()
        searchVC.searchBar.placeholder = "Search repository"
        searchVC.searchResultsUpdater = self
        navigationItem.searchController = searchVC
        
        // Setup UI Table
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: _cellId)
    }
...
